# dci-core-aup

./: CMakeLists.txt
include/dci/: aup.hpp
include/dci/aup/: api.hpp  applier.hpp  catalog.hpp  exception.hpp  instance.hpp  oid.hpp  storage.hpp
include/dci/aup/applier/: result.hpp  task.hpp
include/dci/aup/catalog/: file.hpp  identify.hpp  object.hpp  release.hpp  unit.hpp
include/dci/aup/instance/: io.hpp  notifiers.hpp  setup.hpp
src/: applier.cpp  catalog.cpp  instance.cpp  instance.hpp  storage.cpp
src-collector/: collector.cpp  collector.hpp  main.cpp
src-collector/collector/: absAndRel.hpp  loadMeta.cpp  meta.cpp  meta.hpp  path2Lower.cpp  path2Lower.hpp  process.cpp  set.cpp  target.cpp  target.hpp  unit.cpp  unit.hpp
src/catalog/: identify.cpp
src/impl/: applier.cpp  applier.hpp  catalog.cpp  catalog.hpp  storage.cpp  storage.hpp
src/impl/catalog/: deserializeObject.hpp  enumerateObjectFields.hpp  serializeObject.hpp
src/instance/: criteria.cpp  criteria.hpp  importer.cpp  importer.hpp  io.cpp  notifiers.cpp  setup.cpp
test/: applier.cpp  catalog.cpp  storage.cpp
